--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -112,26 +112,27 @@
       text-decoration: underline;
     }
 
-    .find-type-button {
-      margin: 30px auto 50px;
-      display: block;
-      padding: 10px 30px;
-      border: 2px solid white;
-      background-color: transparent;
-      color: white;
-      font-size: 1rem;
-      font-family: 'Montserrat', sans-serif;
-      cursor: pointer;
-      border-radius: 6px;
-      text-align: center;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
+ .find-type-button {
+  display: block;
+  margin: 30px auto 10px;
+  padding: 12px 28px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-style: italic;
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: fit-content;
+  transition: background-color 0.3s, color 0.3s;
+}
 
-    .find-type-button:hover {
-      background-color: white;
-      color: black;
-    }
+.find-type-button:hover {
+  background-color: white;
+  color: black;
+}
   </style>
 </head>
 
