--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -14,17 +14,27 @@
     .red-room { background-color: #950606; }
 
     .logo-img {
-      display: block;
-      margin: 0 auto;
-      max-width: 125px;
-      height: auto;
-      padding-top: 25px;
-    }
+  display: block;
+  margin: 0 auto;
+  max-width: 125px;
+  height: auto;
+  padding-top: 10px; /* reduce top padding */
+  padding-bottom: 10px; /* add spacing below logo */
+}
 
-    .page-title {
-      text-align: center;
-      padding: 10px 0;
-    }
+.page-title {
+  text-align: center;
+  padding: 0; /* remove extra top/bottom padding */
+  margin: 6px 0; /* tighter spacing around title */
+}
+
+.title-line {
+  height: 1px;
+  background-color: white;
+  width: 100%;
+  max-width: 700px;
+  margin: 6px auto; /* closer to title */
+}
 
     .page-title h1 {
       font-size: 2.6rem;
