--- a/Result.html
+++ b/Result.html
@@ -150,17 +150,17 @@
     }
 
     archetypeText.innerHTML = `
-      <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-        Your Sexual Profile:
-      </div>
-      <div style="font-weight: bold; font-size: 1.4rem; margin-bottom: 2px;">
-        ${typeName}
-      </div>
-      ${imageHTML}
-      <div style="font-style: italic; margin-top: 10px;">
-        ${slogan}
-      </div>
-    `;
+  <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+    Your Sexual Profile:
+  </div>
+  <div style="font-weight: bold; font-size: 1.4rem; margin-bottom: 2px;">
+    ${typeName}
+  </div>
+  <div style="font-style: italic; margin-top: 4px; margin-bottom: 10px;">
+    ${slogan}
+  </div>
+  ${imageHTML}
+`;
 
     const matches = {
       "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
