--- a/Result.html
+++ b/Result.html
@@ -153,10 +153,10 @@
   <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
     Your Sexual Profile:
   </div>
-  <div style="font-weight: bold; font-size: 1.4rem; margin-bottom: 2px;">
+  <div style="font-weight: bold; font-size: 1.7rem; margin-bottom: 8px;">
     ${typeName}
   </div>
-  <div style="font-style: italic; margin-top: 4px; margin-bottom: 10px;">
+  <div style="font-style: italic; margin-bottom: 12px;">
     ${slogan}
   </div>
   ${imageHTML}
