--- a/Result.html
+++ b/Result.html
@@ -79,7 +79,6 @@
   <div><button onclick="showTypeDetails()">More about you</button></div>
   <div id="typeDetails"></div>
 
-  <!-- ✅ Script Starts -->
   <script>
     const params = new URLSearchParams(window.location.search);
     const q3 = params.get("q3");
@@ -137,40 +136,31 @@
     if (typeName !== "Unknown" && (q8 === "eggplant" || q8 === "cat")) {
       const genderSuffix = q8 === "eggplant" ? "male" : "female";
       const imagePath = `images/${safeName}_${genderSuffix}.jpg`;
-     const profileSlug = safeName.replace(/__/g, "-");
 
-imageHTML = `
-  <a href="/profiles/${profileSlug}.html" style="display: inline-block;" title="View full profile">
-    <img 
-      src="${imagePath}" 
-      alt="${typeName} Image" 
-      style="
-        max-width: 100%;
-        height: auto;
-        border-radius: 16px;
-        margin: 15px 0;
-        border: 4px solid gold;
-        box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-        -webkit-user-drag: none;
-        user-select: none;
-      "
-      oncontextmenu="return false"
-      draggable="false"
-    >
-  </a>
-`;
+      imageHTML = `
+        <img src="${imagePath}" alt="${typeName} Image" style="
+          max-width: 100%;
+          height: auto;
+          border-radius: 16px;
+          margin: 15px 0;
+          border: 4px solid gold;
+          box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+        ">
+      `;
+    }
+
     archetypeText.innerHTML = `
-  <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-    Your Sexual Profile:
-  </div>
-  <div style="font-weight: bold; font-size: 1.7rem; margin-bottom: 8px;">
-    ${typeName}
-  </div>
-  <div style="font-style: italic; margin-bottom: 12px;">
-    ${slogan}
-  </div>
-  ${imageHTML}
-`;
+      <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+        Your Sexual Profile:
+      </div>
+      <div style="font-weight: bold; font-size: 1.7rem; margin-bottom: 8px;">
+        ${typeName}
+      </div>
+      <div style="font-style: italic; margin-bottom: 12px;">
+        ${slogan}
+      </div>
+      ${imageHTML}
+    `;
 
     const matches = {
       "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
