--- a/Result.html
+++ b/Result.html
@@ -157,8 +157,10 @@
         Your Sexual Profile:
       </div>
       <div style="font-weight: bold; font-size: 1.7rem; margin-bottom: 8px;">
-        ${typeName}
-      </div>
+  <a href="/profiles/${profileSlug}.html" style="color: white; text-decoration: underline;" title="View full profile">
+    ${typeName}
+  </a>
+</div>
       <div style="font-style: italic; margin-bottom: 12px;">
         ${slogan}
       </div>
